[package]
name = "pluggable_interrupt_os"
version = "0.3.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2018"
license = "MIT"
description = "Enables user to create a simple x86 OS by supplying interrupt handlers"
readme = "README.md"
repository = "https://github.com/gjf2a/pluggable_interrupt_os"
keywords = ["x86-interrupts", "teaching-os"]
categories = ["no-std", "hardware-support"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.12.1"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
