[package]
name = "pluggable_interrupt_os"
version = "0.5.0"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"
license = "MIT"
description = "Enables user to create a simple x86 OS by supplying interrupt handlers"
readme = "README.md"
repository = "https://github.com/gjf2a/pluggable_interrupt_os"
keywords = ["x86-interrupts", "teaching-os"]
categories = ["no-std", "hardware-support"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8" # Can't upgrade to 0.10
volatile = "0.3" # Can't upgrade to 0.4
spin = "0.9"
x86_64 = "0.14" # Can't upgrade to 0.15
uart_16550 = "0.3.2"
pic8259 = "0.10"
pc-keyboard = "0.5" # Can't upgrade to 0.6

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
