[package]
name = "pluggable_interrupt_os"
version = "0.5.3"
authors = ["gjf2a <ferrer@hendrix.edu>"]
edition = "2021"
license = "MIT"
description = "Enables user to create a simple x86 OS by supplying interrupt handlers"
readme = "README.md"
repository = "https://github.com/gjf2a/pluggable_interrupt_os"
keywords = ["x86-interrupts", "teaching-os"]
categories = ["no-std", "hardware-support"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.30" # Can't upgrade to 0.11 - would require fundamental change to the library, as the VGA buffer is no longer supported.
volatile = "0.3" # Can't upgrade to 0.6; I got it to compile, but the runtime behavior was bizarre.
spin = "0.9.8"
x86_64 = "0.15.2"
uart_16550 = "0.3.2"
pic8259 = "0.11.0"
pc-keyboard = "0.8.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
